tests/compile-fail/compile_fail__arg_count_fixed.snap
---
source: tests/compile-fail.rs
expression: stderr
---
error: wrong number of arguments to 'posKeyframe'
   ┌─ <input>:21:9
   │
21 │         posKeyframe(0f, 0f, 0f, 0f);
   │         ^^^^^^^^^^^ expects 3 arguments, got 4


